--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "backbone": "^1.1.2",
     "backbone.paginator": "^2.0.2",
     "browserify": "^5.11.0",
+    "express": "^4.8.7",
+    "gulp-express": "0.0.9",
     "jquery": "^2.1.1",
     "lodash": "^2.4.1",
-    "react": "^0.11.1"
-
+    "react": "^0.11.1",
+    "request": "^2.36.0",
+    "serve-index": "^1.2.0",
+    "serve-static": "^1.5.3"
   },
   "devDependencies": {
     "gulp-connect-multi": "^1.0.8",
