--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     "serve-index": "^1.2.0",
     "serve-static": "^1.5.3"
   },
+  "keywords": [
+    "backbone",
+    "react-component",
+    "react",
+    "jest",
+    "datatables"
+  ],
   "devDependencies": {
     "gulp-connect-multi": "^1.0.8",
     "jest-cli": "^0.1.18",
