--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
       "<rootDir>/node_modules/react"
     ]
   },
-  "author": "",
-  "license": "ISC"
+  "author": "James Hrisho",
+  "license": "MIT"
 }
