--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backbone-react-ui",
-  "version": "0.1.2",
-  "description": "",
+  "version": "0.1.4",
+  "description": "React components for use with Backbone, Bootstrap and Backbone.Paginator",
   "main": "index",
   "directories": {
     "test": "__tests__"
@@ -22,6 +22,9 @@
     "request": "^2.36.0",
     "serve-index": "^1.2.0",
     "serve-static": "^1.5.3"
+  },
+  "bugs": {
+    "url": "https://github.com/securingsincity/backbone-react-ui/issues"
   },
   "keywords": [
     "backbone",
@@ -53,6 +56,10 @@
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/securingsincity/backbone-react-ui.git"
   },
   "author": "James Hrisho",
   "license": "MIT"
