--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "devDependencies": {
     "gulp-connect-multi": "^1.0.8",
-    "jest-cli": "^0.1.18",
+    "jest-cli": "*",
     "react-test-utils": "0.0.1",
     "react-tools": "*",
     "reactify": "~0.10.0",
@@ -53,6 +53,7 @@
       "/node_modules/",
       "<rootDir>/node_modules/"
     ],
+    "collectCoverage": true,
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react"
     ]
